--- a/index.html
+++ b/index.html
@@ -4,16 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TechWave</title>
+    <link rel="stylesheet" href="./style/TechWave.css">
 </head>
 <body>
     <header>
-
+     <nav class="navbar">
+        <h2 class="navbar-title">Tech<span id="gradient">Wave</span></h2>
+        <ul class="nav-info">
+            <li><a href="">About</a></li>
+            <li><a href="">Episodes</a></li>
+            <li><a href="">Host</a></li>
+        </ul>
+            <button class="btn-primary">Subscribe<img src="./icon/ArrowRight (1).png" alt=""></button>
+     </nav>
     </header>
     <main>
 
     </main>
     <footer>
-        
+
     </footer>
 </body>
 </html>
