--- a/index.html
+++ b/index.html
@@ -1,28 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TechWave</title>
     <link rel="stylesheet" href="./style/TechWave.css">
 </head>
+
 <body>
     <header>
-     <nav class="navbar">
-        <h2 class="navbar-title">Tech<span id="gradient">Wave</span></h2>
-        <ul class="nav-info">
-            <li><a href="">About</a></li>
-            <li><a href="">Episodes</a></li>
-            <li><a href="">Host</a></li>
-        </ul>
+        <nav class="hidden-nav">
+            <h2 class="hidden-title">Tech<span id="gradient">Wave</span></h2>
+            <img src="./assets/hamburger-menu.png" alt="">
+
+        </nav>
+        <nav class="navbar">
+            <h2 class="navbar-title">Tech<span id="gradient">Wave</span></h2>
+            <ul class="nav-info">
+                <li><a href="">About</a></li>
+                <li><a href="">Episodes</a></li>
+                <li><a href="">Host</a></li>
+            </ul>
             <button class="btn-primary">Subscribe<img src="./icon/ArrowRight (1).png" alt=""></button>
-     </nav>
+        </nav>
+        <section class="banner-section">
+            <div class="tooltip">
+                <button class="tooltip-btn">NEW</button>
+            </div>
+            <div class="banner">
+                <img src="./assets/hero-circle.png" alt="">
+                <h2 class="banner-title">TechWave</h2>
+                <p class="banner-description">Your daily dose of tech insights, productivity hacks, and personal growth
+                </p>
+                <div class="btn-head">
+                    <button class="spotify-btn">Listen on Spotify</button>
+                    <button class="Subscribe">Subscribe</button>
+                </div>
+
+
+            </div>
+        </section>
     </header>
     <main>
+        <section class="about-section">
+            <h3 class="about-title">About the Podcast</h3>
+            <p class="about-description">TechWave is your go-to podcast for staying ahead in the fast-paced world of technology. <br>
+                We break down complex topics into digestible insights, explore productivity strategies that actually
+                work,<br>
+                and share stories of personal growth from industry leaders.</p>
+                <p class="about-description-2">Join thousands of young professionals and tech enthusiasts who start their day with TechWave.</p>
+                
+            <hr>
+         <div class="review-section">
+            <div class="review">
+                <h2 class="review-title">150K+</h2>
+                <p class="review-description">Monthly Listeners</p>
+            </div>
+            <div>
+                <h2 class="review-title">200+</h2>
+                <p class="review-description">Episodes Published</p>
+            </div>
+            <div>
+                <h2 class="review-title">4.9★</h2>
+                <p class="review-description">Average Rating</p>
+            </div>
+            <div>
+                <h2 class="review-title">50+</h2>
+                <p class="review-description">Industry Experts</p>
+            </div>
 
+         </div>
+        </section>
     </main>
     <footer>
 
     </footer>
 </body>
+
 </html>
