added techwave section

--- a/index.html
+++ b/index.html
@@ -25,11 +25,17 @@
             <button class="btn-primary">Subscribe<img src="./icon/ArrowRight (1).png" alt=""></button>
         </nav>
         <section class="banner-section">
-            <div class="tooltip">
+            <!-- <div class="tooltip">
+                 <img src="./assets/microphone.png" alt="">
                 <button class="tooltip-btn">NEW</button>
-            </div>
+            </div> -->
+           
             <div class="banner">
-                <img src="./assets/hero-circle.png" alt="">
+                <div class="container">
+                    <img src="./assets/microphone.png" alt="">
+                    <h3 class="tooltip-btn">New</h3>
+                </div>
+                <!-- <img src="./assets/hero-circle.png" alt=""> -->
                 <h2 class="banner-title">TechWave</h2>
                 <p class="banner-description">Your daily dose of tech insights, productivity hacks, and personal growth
                 </p>
@@ -73,6 +79,38 @@
          </div>
         </section>
     </main>
+
+    <!-- Techwave section -->
+   <section class="techwave-container">
+    <h2 class="techwave-title">Why Choose TechWave</h2>
+      <div class="techwave">
+        <div class="headphone">
+            <img src="./icon/headphones-01.png" alt="">
+            <h3 class="card-title">Premium Audio Quality</h3>
+            <p class="card-description">Experience crystal-clear sound with professional-grade recording equipment and expert audio engineering. Every episode is mastered for optimal listening across all devices and platforms.</p>    
+        </div>
+        <div class="mobaile">
+            <img src="./icon/phone-01.png" alt="">
+            <h3 class="card-title">Mobile Friendly</h3>
+            <p class="card-description">Listen on the go with seamless mobile experience and offline downloads.</p>    
+        </div>
+        <div class="global">
+            <img src="./icon/globe-05.png" alt="">
+            <h3 class="card-title">Global Community</h3>
+            <p class="card-description">Connect with tech enthusiasts from over 120 countries worldwide.</p>    
+        </div>
+        <div class="interview">
+            <img src="./icon/zap-fast.png" alt="">
+            <h3 class="card-title">Exclusive Interviews</h3>
+            <p class="card-description">Get unprecedented access to industry titans, startup founders, and tech visionaries. Our host secures exclusive conversations you won't find anywhere else, diving deep into their journeys, failures, and success strategies.</p>    
+        </div>
+        <div class="resourse">
+            <img src="./icon/book-open-01.png" alt="">
+            <h3 class="card-title">Rich Resources</h3>
+            <p class="card-description">Access show notes, transcripts, and additional learning materials for every episode.</p>    
+        </div>
+    </div>
+   </section>
     <footer>
 
     </footer>
