added hoster section

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="banner">
                 <div class="container">
                     <img src="./assets/microphone.png" alt="">
-                    <h3 class="tooltip-btn">New</h3>
+                    <<h3 class="tooltip-btn ">New</h3>
                 </div>
                 <!-- <img src="./assets/hero-circle.png" alt=""> -->
                 <h2 class="banner-title">TechWave</h2>
@@ -111,6 +111,59 @@
         </div>
     </div>
    </section>
+   <!-- Featured Episodes section -->
+ <section class="episodes-section">
+     <h2 class="episode-title">Featured Episodes section</h2>
+     <div class="episode-container">
+
+    <div class="episodes-1">
+       <iframe width="300" height="150" src="https://www.youtube.com/embed/ElAqHJk0-2Q?si=Ei_pL0PmMouS9Fzg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <h2 class="episodes-title">The Future of AI in Everyday Life</h2>
+        <p class="episodes-discription">Exploring how artificial intelligence is transforming our daily routines and what to expect in the next decade.</p>
+       <div class="clock">
+         <img src="./icon/iconamoon_clock-fill.png" alt=""><span style="color: #00FF88;">35 min</span>
+       </div>
+
+    </div>
+    <div class="episodes-1">
+        <iframe width="300" height="130" src="https://www.youtube.com/embed/TahmbZi1EiI?si=LPLNk-SLr6eLdbxa" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <h2 class="episodes-title">Building Better Habits for Remote Work</h2>
+        <p class="episodes-discription">Practical strategies for staying productive and maintaining work-life balance in a remote environment.</p>
+       <div class="clock">
+         <img src="./icon/iconamoon_clock-fill.png" alt=""><span style="color: #00FF88;">35 min</span>
+       </div>
+
+    </div>
+    <div class="episodes-1">
+        <iframe width="300" height="150" src="https://www.youtube.com/embed/PJb_ZMbeGug?si=_679tDIgzfNGD72B" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <h2 class="episodes-title">Career Growth in Tech: A Roadmap</h2>
+        <p class="episodes-discription">Expert advice on navigating your tech career from junior developer to senior leadership roles.</p>
+        <br>
+      <div class="clock">
+         <img src="./icon/iconamoon_clock-fill.png" alt=""><span style="color: #00FF88;">35 min</span>
+       </div>
+
+    </div>
+</div>
+ </section>
+ <!-- Meet the Host section -->
+ <section class="host-section">
+    <h2 class="hoster-title">Meet the Host section</h2>
+    <div class="host-container">
+        <div>
+       <img src="./assets/host.png" alt="">
+        </div>
+        <div>
+       <h3 class="host-title">Alex Kumar</h3>
+       <p class="host-description">Tech entrepreneur, productivity expert, and lifelong learner. Alex has been in the tech industry for over 10 years, working with startups and Fortune 500 companies. Through TechWave, Alex shares insights from industry leaders and practical advice for anyone looking to grow in tech.</p>
+       <img src="./assets/linkedin.png" alt="">
+       <img src="./assets/x.png" alt="">
+       <img src="./assets/instagram.png" alt="">
+       <img src="./assets/youtube.png" alt="">
+        </div>
+    </div>
+
+ </section>
     <footer>
 
     </footer>
