added footer section

--- a/index.html
+++ b/index.html
@@ -165,7 +165,18 @@
 
  </section>
     <footer>
+     <section class="footer-section">
+        <h1 class="fot-title">Tech<span id="gradient">Wave</span></h1>
+        <div class="footer-container">
+        <img src="./assets/spotify.png" alt=""><p>spotify</p>
+        <img src="./assets/apple-podcast.png" alt=""><p>Apple product</p>
+        <img src="./assets/youtube-podcast.png" alt=""><p>YouTube</p>
+        <img src="./assets/twitter.png" alt=""><p>Twitter</p>
+        </div>
+        <p class="last-description">© 2026 TechWave Podcast. All rights reserved.</p>
 
+
+     </section>
     </footer>
 </body>
 
