added some problem fixt

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <title>TechWave</title>
     <link rel="stylesheet" href="./style/TechWave.css">
 </head>
@@ -25,17 +26,12 @@
             <button class="btn-primary">Subscribe<img src="./icon/ArrowRight (1).png" alt=""></button>
         </nav>
         <section class="banner-section">
-            <!-- <div class="tooltip">
-                 <img src="./assets/microphone.png" alt="">
-                <button class="tooltip-btn">NEW</button>
-            </div> -->
            
             <div class="banner">
                 <div class="container">
                     <img src="./assets/microphone.png" alt="">
-                    <<h3 class="tooltip-btn ">New</h3>
+                    <<h3 class="tooltip-btn animate-spin">New</h3>
                 </div>
-                <!-- <img src="./assets/hero-circle.png" alt=""> -->
                 <h2 class="banner-title">TechWave</h2>
                 <p class="banner-description">Your daily dose of tech insights, productivity hacks, and personal growth
                 </p>
@@ -153,13 +149,15 @@
         <div>
        <img src="./assets/host.png" alt="">
         </div>
-        <div>
+        <div class="hoster-container">
        <h3 class="host-title">Alex Kumar</h3>
        <p class="host-description">Tech entrepreneur, productivity expert, and lifelong learner. Alex has been in the tech industry for over 10 years, working with startups and Fortune 500 companies. Through TechWave, Alex shares insights from industry leaders and practical advice for anyone looking to grow in tech.</p>
-       <img src="./assets/linkedin.png" alt="">
+      <div class="hoster-img">
+        <img src="./assets/linkedin.png" alt="">
        <img src="./assets/x.png" alt="">
        <img src="./assets/instagram.png" alt="">
        <img src="./assets/youtube.png" alt="">
+      </div>
         </div>
     </div>
 
